[Marcus] - Criado dto para mapear dados da api, feito sistema de cache para request, assim não dependendo da latencia da rede para retornar com ótima performace documentado as rotas , refatorado ainda o httpAsync para trabalho em paralelo
