# app/Data/DTOs/ProductDto.php
@@ -1,0 +1,14 @@
+<?php
+
+namespace App\Data\DTOs;
+
+class ProductDto
+{
+    public function __construct(
+        public int $id,
+        public string $title,
+        public string $image,
+        public float $price,
+        public ?float $review = null
+    ) {}
+}
