# routes/api/products.php
@@ -8,3 +8,18 @@ use Illuminate\Support\Facades\Route;
 Route::prefix('v1/products')->group(function () {
     Route::get('/', [ProductController::class,'listAll']);
 });
+
+Route::get('/products/{id}', function ($id){
+    return [
+        "id" => 3,
+        "title" => "Mens Cotton Jacket",
+        "price" => 55.99,
+        "description" => "great outerwear jackets for Spring/Autumn/Winter, suitable for many occasions, such as working, hiking, camping, mountain/rock climbing, cycling, traveling or other outdoors. Good gift choice for you or your family member. A warm hearted love to Father, husband or son in this thanksgiving or Christmas Day.",
+        "category" => "men's clothing",
+        "image" => "https://fakestoreapi.com/img/71li-ujtlUL._AC_UX679_.jpg",
+        "rating" => [
+            "rate" => 4.7,
+            "count" => 500,
+        ],
+    ];
+});
